tests/type-errors/error_bls_arith.arl
archetype error_bls_arith

variable r : bls12_381_fr = 10fr

entry exec () {
  var a : nat = 1;
  r := r + a;
}